--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,6 +1,75 @@
+<!--<footer>-->
+<!--    <div class="mt-4 p-5 bg-primary text-white rounded">-->
+<!--        <h1>Le Truong Minh Hoang</h1>-->
+<!--        <p>&copy; 2023</p>-->
+<!--    </div>-->
+<!--</footer>-->
+
 <footer>
-    <div class="mt-4 p-5 bg-primary text-white rounded">
-        <h1>Le Truong Minh Hoang</h1>
-        <p>&copy; 2023</p>
+    <div class="footer_contact flex">
+        <div class="footer_contact-info">
+            <img src=".app/templates/assets/images/logo/Logo (1).png" alt="OU">
+        </div>
+        <p>
+            Trường Đại học Mở thành phố Hồ Chí Minh đóng góp và nâng cao tri thức cho cộng đồng bằng các phương thức
+            linh hoạt và thuận tiện nhất.
+        </p>
+    </div>
+    <div class="footer_address flex">
+        <div class="footer_address-content">
+            <h1>thông tin chung</h1>
+            <p>Địa chỉ: 35 – 37 Hồ Hảo Hớn, Phường Cô Giang, Quận 1, TP. HCM.</p>
+            <p>Điện thoại: <span>028-38364748.</span></p>
+            <p>Fax: <span>028-39207639 hoặc 028-39207640.</span></p>
+            <p>E-mail: <a href="mailto: ou@ou.edu.vn">ou@ou.edu.vn.</a></p>
+            <div id="media">
+                <h3>Kết nối với chúng tôi</h3>
+                <a href="" target="_blank"><i class="fa-brands fa-google"></i></a>
+                <a href="" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.facebook.com/TruongDaiHocMo" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+        </div>
+        <div class="footer_address-content">
+            <h1>các cơ sở trực thuộc</h1>
+            <div id="detail">
+                <a href="https://ou.edu.vn/co-so-1/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 1:</div>
+                    <div>97 Võ Văn Tần, P. Võ Thị Sáu, Q. 3, TP. Hồ Chí Minh.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-2/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 2:</div>
+                    <div>35-37 Hồ Hảo Hớn, P. Cô Giang, Q. 1 , TP. Hồ Chí Minh.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-3/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 3:</div>
+                    <div>371 Nguyễn Kiệm, P. 3, Q. Gò Vấp, TP. Hồ Chí Minh.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-4/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 4:</div>
+                    <div>02 Mai Thị Lựu, P. Đa Kao, Q. 1, TP. Hồ Chí Minh.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-5/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 5:</div>
+                    <div>68 Lê Thị Trung, P. Phú Lợi, TP. Thủ Dầu Một, Tỉnh Bình Dương.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-6/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 6:</div>
+                    <div>Đường số 9, P. Long Bình Tân, TP. Biên Hòa, Tỉnh Đồng Nai.</div>
+                </a>
+                <br/>
+                <a href="https://ou.edu.vn/co-so-7/" target="_blank" class="flex">
+                    <div><i class="fa-solid fa-location-dot"></i> Địa điểm 7:</div>
+                    <div>Số 04 đường Tân Định, P. Ninh Hiệp, Thị Xã Ninh Hòa, Tỉnh Khánh Hòa.</div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="footer_copyright">
+        <p>&copy; 2022 đại học mở - nhóm 1</p>
     </div>
 </footer>
