--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,30 +1,222 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-<section class="container">
-    <div class="row" style="padding: 5px;">
-        {% for p in products %}
-        <div class="col-xs-12 col-md-3">
-            <div class="card">
-                <img class="card-img-top" src="{{ p.image }}" alt="Card image">
-                <div class="card-body">
-                    <h4 class="card-title">{{ p.name }}</h4>
-                    <p class="card-text">{{ p.price }} VND</p>
-                    <a href="#" class="btn btn-primary">Xem chi tiết</a>
-                    <a href="#" class="btn btn-danger" onclick="addToCart({{p.id}}, '{{p.name}}', {{p.price}})">Mua</a>
+<section>
+    <form action="">
+        <div class="search">
+            <p class="head-title">Tìm kiếm khóa học quan tâm</p>
+            <div class="search_detail flex">
+                <div class="search_detail-in">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Nhập khóa học, môn học..." id="search_name">
                 </div>
+                <div class="search_detail-in">
+                    <i class="fa-solid fa-list"></i>
+                    <select name="" id="program">
+                        <option value="Tất cả các chương trình">Tất cả các chương trình</option>
+                        <option value="Thiết kế Website">Thiết kế Website</option>
+                        <option value="Lập trình di động">Lập trình di động</option>
+                        <option value="Tin học văn phòng">Tin học văn phòng</option>
+                        <option value="Tin học văn phòng chuẩn quốc tế (MOS)">Tin học văn phòng (MOS)</option>
+                        <option value="Mạng máy tính">Mạng máy tính</option>
+                    </select>
+                </div>
+                <button>Tìm thông tin</button>
             </div>
         </div>
-        {% endfor %}
+    </form>
+</section>
+
+<section>
+    <div class="education-program">
+        <p class="head-title">Chương trình đào tạo</p>
+        <div class="main flex">
+            <div class="subject">
+                <a href=".app/templates/assets/edu.html#thiet_ke_website">
+                    <p>Thiết kế Website</p>
+                    <img src=".app/templates/assets/images/educationProgram/website.png" alt="website">
+                </a>
+            </div>
+            <div class="subject">
+                <a href=".app/templates/assets/edu.html#lap_trinh_di_dong">
+                    <p>Lập trình di động</p>
+                    <img src=".app/templates/assets/images/educationProgram/mobile.png" alt="mobile">
+                </a>
+            </div>
+            <div class="subject">
+                <a href=".app/templates/assets/edu.html#tin_hoc_van_phong">
+                    <p>Tin học văn phòng</p>
+                    <img src=".app/templates/assets/images/educationProgram/office.png" alt="office">
+                </a>
+            </div>
+            <div class="subject">
+                <a href=".app/templates/assets/edu.html#tin_hoc_van_phong_mos">
+                    <p>Tin học văn phòng (MOS)</p>
+                    <img src=".app/templates/assets/images/educationProgram/mos.webp" alt="mos">
+                </a>
+            </div>
+            <div class="subject">
+                <a href=".app/templates/assets/edu.html#mang_may_tinh">
+                    <p>Mạng máy tính</p>
+                    <img src=".app/templates/assets/images/educationProgram/network.png" alt="network">
+                </a>
+            </div>
+        </div>
+
     </div>
 
-    <ul class="pagination mt-1">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        {% for i in range(pages) %}
-        <li class="page-item"><a class="page-link" href="?page={{ i + 1 }}">{{ i + 1 }}</a></li>
-        {% endfor %}
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
+    <div class="support-utility">
+        <p class="head-title">Tiện ích hỗ trợ</p>
+        <div class="main1 flex">
+            <div class="subject">
+                <a href="javascript:;">
+                    <img src=".app/templates/assets/images/utilities/document.jpg" alt="tailieu">
+                    <p>Kho tài liệu</p>
+                </a>
+            </div>
+            <div class="subject">
+                <a href="javascript:;">
+                    <img src=".app/templates/assets/images/utilities/search.jpg" alt="tracuu">
+                    <p>Tra cứu điểm thi</p>
+                </a>
+            </div>
+            <div class="subject">
+                <a href="javascript:;">
+                    <img src=".app/templates/assets/images/utilities/online.jpg" alt="online">
+                    <p>Lớp học trực tuyến</p>
+                </a>
+            </div>
+            <div class="subject">
+                <a href="javascript:;">
+                    <img src=".app/templates/assets/images/utilities/certificate.jpg" alt="chungchi">
+                    <p>Chứng chỉ</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="news">
+        <p class="head-title">Tin tức</p>
+        <div class="notifications flex">
+            <a href=".app/templates/assets/news.html" class="main_notification">
+                <div>
+                    <div>
+                        <img src=".app/templates/assets/images/notification/CNTT.jpg" alt="">
+                        <p>Giới thiệu về khoa phụ trách</p>
+                    </div>
+                </div>
+            </a>
+            <div class="clone_notification flex">
+                <a href=".app/templates/assets/news.html" class="notification">
+                    <div>
+                        <div>
+                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <p>Thông báo</p>
+                        </div>
+                    </div>
+                </a>
+                <a href=".app/templates/assets/news.html" class="notification">
+                    <div>
+                        <div>
+                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <p>Thông báo</p>
+                        </div>
+                    </div>
+                </a>
+                <a href=".app/templates/assets/news.html" class="notification">
+                    <div>
+                        <div>
+                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <p>Thông báo</p>
+                        </div>
+                    </div>
+                </a>
+                <a href=".app/templates/assets/news.html" class="notification">
+                    <div>
+                        <div>
+                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <p>Thông báo</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="teacher-group">
+        <p class="head-title">Đội ngũ giảng viên</p>
+        <div class="main3 flex">
+            <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
+                    title="Teacher" target="_blank">
+                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+            </a></div>
+            <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
+                    title="Teacher" target="_blank">
+                <img src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="teacher">
+            </a></div>
+            <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
+                    title="Teacher" target="_blank">
+                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+            </a></div>
+            <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
+                    title="Teacher" target="_blank">
+                <img src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="teacher">
+            </a></div>
+            <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
+                    title="Teacher" target="_blank">
+                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+            </a></div>
+        </div>
+
+        <div class="main3_mobile">
+            <div class="teacher_slider-outer">
+                <div class="teacher_slider-inner flex">
+                    <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" rel="head"
+                       class="teacher_active"><img src=".app/templates/assets/images/infomation/teacher(male).webp"
+                                                   alt="tea1"></a>
+                    <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
+                            src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="tea2"></a>
+                    <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
+                            src=".app/templates/assets/images/infomation/teacher(male).webp" alt="tea3"></a>
+                    <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
+                            src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="tea4"></a>
+                    <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" rel="tail"><img
+                            src=".app/templates/assets/images/infomation/teacher(male).webp" alt="tea5"></a>
+                </div>
+                <div class="teacher_prev"><i class="fa-solid fa-angles-left"></i></div>
+                <div class="teacher_next"><i class="fa-solid fa-angles-right"></i></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comments">
+        <p class="head-title">Nhận xét của học viên</p>
+        <div class="slider-outer">
+            <div class="slider-inner">
+                <a href="javascript:;" rel="head" class="active"><img
+                        src=".app/templates/assets/images/comments/comment_pc_1.jpg" alt="com1"></a>
+                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_pc_2.jpg" alt="com2"></a>
+                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_pc_3.jpg" alt="com3"></a>
+                <a href="javascript:;" rel="tail"><img src=".app/templates/assets/images/comments/comment_pc_4.jpg"
+                                                       alt="com4"></a>
+            </div>
+            <div class="prev"><i class="fa-solid fa-angles-left"></i></div>
+            <div class="next"><i class="fa-solid fa-angles-right"></i></div>
+        </div>
+
+        <div class="slider-outer_mobile">
+            <div class="slider-inner flex">
+                <a href="javascript:;" rel="head" class="active"><img
+                        src=".app/templates/assets/images/comments/comment_mobile_2.png" alt="com1"></a>
+                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_mobile_1.png" alt="com2"></a>
+                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_mobile_3.png" alt="com3"></a>
+                <a href="javascript:;" rel="tail"><img src=".app/templates/assets/images/comments/comment_mobile_4.png"
+                                                       alt="com4"></a>
+            </div>
+            <div class="prev"><i class="fa-solid fa-angles-left"></i></div>
+            <div class="next"><i class="fa-solid fa-angles-right"></i></div>
+        </div>
+    </div>
 </section>
 
 <script src="{{ url_for('static', filename='js/cart.js') }}"></script>
