--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,33 +32,33 @@
         <p class="head-title">Chương trình đào tạo</p>
         <div class="main flex">
             <div class="subject">
-                <a href=".app/templates/assets/edu.html#thiet_ke_website">
+                <a href="/assets/edu.html#thiet_ke_website">
                     <p>Thiết kế Website</p>
-                    <img src=".app/templates/assets/images/educationProgram/website.png" alt="website">
+                    <img src="../static/images/educationProgram/website.png" alt="website">
                 </a>
             </div>
             <div class="subject">
-                <a href=".app/templates/assets/edu.html#lap_trinh_di_dong">
+                <a href="../static/edu.html#lap_trinh_di_dong">
                     <p>Lập trình di động</p>
-                    <img src=".app/templates/assets/images/educationProgram/mobile.png" alt="mobile">
+                    <img src="../static/images/educationProgram/mobile.png" alt="mobile">
                 </a>
             </div>
             <div class="subject">
-                <a href=".app/templates/assets/edu.html#tin_hoc_van_phong">
+                <a href="../static/edu.html#tin_hoc_van_phong">
                     <p>Tin học văn phòng</p>
-                    <img src=".app/templates/assets/images/educationProgram/office.png" alt="office">
+                    <img src="../static/images/educationProgram/office.png" alt="office">
                 </a>
             </div>
             <div class="subject">
-                <a href=".app/templates/assets/edu.html#tin_hoc_van_phong_mos">
+                <a href="../static/edu.html#tin_hoc_van_phong_mos">
                     <p>Tin học văn phòng (MOS)</p>
-                    <img src=".app/templates/assets/images/educationProgram/mos.webp" alt="mos">
+                    <img src="../static/images/educationProgram/mos.webp" alt="mos">
                 </a>
             </div>
             <div class="subject">
-                <a href=".app/templates/assets/edu.html#mang_may_tinh">
+                <a href="../static/edu.html#mang_may_tinh">
                     <p>Mạng máy tính</p>
-                    <img src=".app/templates/assets/images/educationProgram/network.png" alt="network">
+                    <img src="../static/images/educationProgram/network.png" alt="network">
                 </a>
             </div>
         </div>
@@ -70,25 +70,25 @@
         <div class="main1 flex">
             <div class="subject">
                 <a href="javascript:;">
-                    <img src=".app/templates/assets/images/utilities/document.jpg" alt="tailieu">
+                    <img src="../static/images/utilities/document.jpg" alt="tailieu">
                     <p>Kho tài liệu</p>
                 </a>
             </div>
             <div class="subject">
                 <a href="javascript:;">
-                    <img src=".app/templates/assets/images/utilities/search.jpg" alt="tracuu">
+                    <img src="../static/images/utilities/search.jpg" alt="tracuu">
                     <p>Tra cứu điểm thi</p>
                 </a>
             </div>
             <div class="subject">
                 <a href="javascript:;">
-                    <img src=".app/templates/assets/images/utilities/online.jpg" alt="online">
+                    <img src="../static/images/utilities/online.jpg" alt="online">
                     <p>Lớp học trực tuyến</p>
                 </a>
             </div>
             <div class="subject">
                 <a href="javascript:;">
-                    <img src=".app/templates/assets/images/utilities/certificate.jpg" alt="chungchi">
+                    <img src="../static/images/utilities/certificate.jpg" alt="chungchi">
                     <p>Chứng chỉ</p>
                 </a>
             </div>
@@ -98,43 +98,43 @@
     <div class="news">
         <p class="head-title">Tin tức</p>
         <div class="notifications flex">
-            <a href=".app/templates/assets/news.html" class="main_notification">
+            <a href="../static/news.html" class="main_notification">
                 <div>
                     <div>
-                        <img src=".app/templates/assets/images/notification/CNTT.jpg" alt="">
+                        <img src="../static/images/notification/CNTT.jpg" alt="">
                         <p>Giới thiệu về khoa phụ trách</p>
                     </div>
                 </div>
             </a>
             <div class="clone_notification flex">
-                <a href=".app/templates/assets/news.html" class="notification">
+                <a href="../static/news.html" class="notification">
                     <div>
                         <div>
-                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <img src="../static/images/notification/another.jpg" alt="">
                             <p>Thông báo</p>
                         </div>
                     </div>
                 </a>
-                <a href=".app/templates/assets/news.html" class="notification">
+                <a href="../static/news.html" class="notification">
                     <div>
                         <div>
-                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <img src="../static/images/notification/another.jpg" alt="">
                             <p>Thông báo</p>
                         </div>
                     </div>
                 </a>
-                <a href=".app/templates/assets/news.html" class="notification">
+                <a href="../static/news.html" class="notification">
                     <div>
                         <div>
-                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <img src="../static/images/notification/another.jpg" alt="">
                             <p>Thông báo</p>
                         </div>
                     </div>
                 </a>
-                <a href=".app/templates/assets/news.html" class="notification">
+                <a href="../static/news.html" class="notification">
                     <div>
                         <div>
-                            <img src=".app/templates/assets/images/notification/another.jpg" alt="">
+                            <img src="../static/images/notification/another.jpg" alt="">
                             <p>Thông báo</p>
                         </div>
                     </div>
@@ -148,23 +148,23 @@
         <div class="main3 flex">
             <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
                     title="Teacher" target="_blank">
-                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+                <img src="../static/images/infomation/teacher(male).webp" alt="teacher">
             </a></div>
             <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
                     title="Teacher" target="_blank">
-                <img src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="teacher">
+                <img src="../static/images/infomation/teacher(female).jpg" alt="teacher">
             </a></div>
             <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
                     title="Teacher" target="_blank">
-                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+                <img src="../static/images/infomation/teacher(male).webp" alt="teacher">
             </a></div>
             <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
                     title="Teacher" target="_blank">
-                <img src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="teacher">
+                <img src="../static/images/infomation/teacher(female).jpg" alt="teacher">
             </a></div>
             <div><a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" class="info-teacher"
                     title="Teacher" target="_blank">
-                <img src=".app/templates/assets/images/infomation/teacher(male).webp" alt="teacher">
+                <img src="../static/images/infomation/teacher(male).webp" alt="teacher">
             </a></div>
         </div>
 
@@ -172,16 +172,16 @@
             <div class="teacher_slider-outer">
                 <div class="teacher_slider-inner flex">
                     <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" rel="head"
-                       class="teacher_active"><img src=".app/templates/assets/images/infomation/teacher(male).webp"
+                       class="teacher_active"><img src="../static/images/infomation/teacher(male).webp"
                                                    alt="tea1"></a>
                     <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
-                            src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="tea2"></a>
+                            src="../static/images/infomation/teacher(female).jpg" alt="tea2"></a>
                     <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
-                            src=".app/templates/assets/images/infomation/teacher(male).webp" alt="tea3"></a>
+                            src="../static/images/infomation/teacher(male).webp" alt="tea3"></a>
                     <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien"><img
-                            src=".app/templates/assets/images/infomation/teacher(female).jpg" alt="tea4"></a>
+                            src="../static/images/infomation/teacher(female).jpg" alt="tea4"></a>
                     <a href="http://it.ou.edu.vn/pages/view/3-danh-sach-giang-vien" rel="tail"><img
-                            src=".app/templates/assets/images/infomation/teacher(male).webp" alt="tea5"></a>
+                            src="../static/images/infomation/teacher(male).webp" alt="tea5"></a>
                 </div>
                 <div class="teacher_prev"><i class="fa-solid fa-angles-left"></i></div>
                 <div class="teacher_next"><i class="fa-solid fa-angles-right"></i></div>
@@ -194,10 +194,10 @@
         <div class="slider-outer">
             <div class="slider-inner">
                 <a href="javascript:;" rel="head" class="active"><img
-                        src=".app/templates/assets/images/comments/comment_pc_1.jpg" alt="com1"></a>
-                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_pc_2.jpg" alt="com2"></a>
-                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_pc_3.jpg" alt="com3"></a>
-                <a href="javascript:;" rel="tail"><img src=".app/templates/assets/images/comments/comment_pc_4.jpg"
+                        src="../static/images/comments/comment_pc_1.jpg" alt="com1"></a>
+                <a href="javascript:;"><img src="../static/images/comments/comment_pc_2.jpg" alt="com2"></a>
+                <a href="javascript:;"><img src="../static/images/comments/comment_pc_3.jpg" alt="com3"></a>
+                <a href="javascript:;" rel="tail"><img src="../static/images/comments/comment_pc_4.jpg"
                                                        alt="com4"></a>
             </div>
             <div class="prev"><i class="fa-solid fa-angles-left"></i></div>
@@ -207,10 +207,10 @@
         <div class="slider-outer_mobile">
             <div class="slider-inner flex">
                 <a href="javascript:;" rel="head" class="active"><img
-                        src=".app/templates/assets/images/comments/comment_mobile_2.png" alt="com1"></a>
-                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_mobile_1.png" alt="com2"></a>
-                <a href="javascript:;"><img src=".app/templates/assets/images/comments/comment_mobile_3.png" alt="com3"></a>
-                <a href="javascript:;" rel="tail"><img src=".app/templates/assets/images/comments/comment_mobile_4.png"
+                        src="../static/images/comments/comment_mobile_2.png" alt="com1"></a>
+                <a href="javascript:;"><img src="../static/images/comments/comment_mobile_1.png" alt="com2"></a>
+                <a href="javascript:;"><img src="../static/images/comments/comment_mobile_3.png" alt="com3"></a>
+                <a href="javascript:;" rel="tail"><img src="../static/images/comments/comment_mobile_4.png"
                                                        alt="com4"></a>
             </div>
             <div class="prev"><i class="fa-solid fa-angles-left"></i></div>
