--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -8,7 +8,7 @@
 <footer>
     <div class="footer_contact flex">
         <div class="footer_contact-info">
-            <img src=".app/templates/assets/images/logo/Logo (1).png" alt="OU">
+            <img src="../static/images/logo/Logo (1).png" alt="OU">
         </div>
         <p>
             Trường Đại học Mở thành phố Hồ Chí Minh đóng góp và nâng cao tri thức cho cộng đồng bằng các phương thức
