--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -1,6 +1,6 @@
 <div class="quickSp">
     <div id="quickIcon">
-        <img src=".app/templates/assets/images/icon/facebook-messenger-icon-1.png" alt="mess">
+        <img src="../static/images/icon/facebook-messenger-icon-1.png" alt="mess">
     </div>
     <div id="quickMess">
         <div id="quickClose"><i class="fa-solid fa-xmark"></i></div>
@@ -18,13 +18,13 @@
 </div>
 
 <a href="javascript:;">
-    <div id="back-home"><img src=".app/templates/assets/images/logo/icon-256x256.png" alt="up"></div>
+    <div id="back-home"><img src="../static/images/logo/icon-256x256.png" alt="up"></div>
 </a>
 
 <header class="header">
     <div class="header_pc flex">
         <div class="header-left">
-            <a href=".app/templates/index.html"><img src=".app/templates/assets/images/logo/Logo (1).png" alt="OU"></a>
+            <a href="/"><img src="../static/images/logo/Logo (1).png" alt="OU"></a>
         </div>
         <div class="header-right">
             <h1>trung tâm tin học</h1>
@@ -33,7 +33,7 @@
 
     <div class="header_tablet flex">
         <div class="header_tablet-logoname flex">
-            <a href=".app/templates/index.html"><img src=".app/templates/assets/images/logo/Logo (1).png" alt="OU"></a>
+            <a href="/"><img src="../static/images/logo/Logo (1).png" alt="OU"></a>
             <h1>trung tâm <br/> tin học</h1>
         </div>
 
@@ -44,14 +44,14 @@
             <div class="nav_tablet">
                 <label for="nav_tablet-input" class="nav_tablet-close"><i class="fa-solid fa-xmark"></i></label>
                 <ul class="nav_tablet-list">
-                    <li><a class="nav_tablet-link" href=".app/templates/index.html"><i class="fa-solid fa-house"></i> Trang chủ</a>
+                    <li><a class="nav_tablet-link" href="./index.html"><i class="fa-solid fa-house"></i> Trang chủ</a>
                     </li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/calendar.html">Lịch khai giảng</a></li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/edu.html">Chương trình đào tạo</a></li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/services.html">Dịch vụ</a></li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/news.html">Tin tức</a></li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
-                    <li><a class="nav_tablet-link" href=".app/templates/assets/contact.html">Liên hệ</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/calendar.html">Lịch khai giảng</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/edu.html">Chương trình đào tạo</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/services.html">Dịch vụ</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/news.html">Tin tức</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
+                    <li><a class="nav_tablet-link" href="./assets/contact.html">Liên hệ</a></li>
                 </ul>
             </div>
             <div class="header_tablet-search">
@@ -65,7 +65,7 @@
 
     <div class="header_mobile flex">
         <div class="header_mobile-logoname flex">
-            <a href=".app/templates/index.html"><img src=".app/templates/assets/images/logo/logo-white.png" alt="OU"></a>
+            <a href="/"><img src="../static/images/logo/logo-white.png" alt="OU"></a>
             <h1>trung tâm tin học</h1>
         </div>
 
@@ -76,14 +76,14 @@
             <div class="nav_mobile">
                 <label for="nav_mobile-input" class="nav_mobile-close"><i class="fa-solid fa-xmark"></i></label>
                 <ul class="nav_mobile-list">
-                    <li><a class="nav_mobile-link" href=".app/templates/index.html"><i class="fa-solid fa-house"></i> Trang chủ</a>
+                    <li><a class="nav_mobile-link" href="./index.html"><i class="fa-solid fa-house"></i> Trang chủ</a>
                     </li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/calendar.html">Lịch khai giảng</a></li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/edu.html">Chương trình đào tạo</a></li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/services.html">Dịch vụ</a></li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/news.html">Tin tức</a></li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
-                    <li><a class="nav_mobile-link" href=".app/templates/assets/contact.html">Liên hệ</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/calendar.html">Lịch khai giảng</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/edu.html">Chương trình đào tạo</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/services.html">Dịch vụ</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/news.html">Tin tức</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
+                    <li><a class="nav_mobile-link" href="./assets/contact.html">Liên hệ</a></li>
                 </ul>
             </div>
             <div class="header_mobile-search">
@@ -98,31 +98,31 @@
 
 <nav>
     <ul class="flex menu">
-        <li><a href=".app/templates/index.html" id="home"><i class="fa-solid fa-house"></i></a></li>
+        <li><a href="/" id="home"><i class="fa-solid fa-house"></i></a></li>
         <li class="sub">
-            <a href=".app/templates/assets/calendar.html">Lịch khai giảng <i class="fa-solid fa-caret-down"></i></a>
+            <a href="./assets/calendar.html">Lịch khai giảng <i class="fa-solid fa-caret-down"></i></a>
             <ul class="menu subcontent">
-                <li><a href=".app/templates/assets/calendar.html#thiet_ke_website">Thiết kế Website</a></li>
-                <li><a href=".app/templates/assets/calendar.html#lap_trinh_di_dong">Lập trình di động</a></li>
-                <li><a href=".app/templates/assets/calendar.html#tin_hoc_van_phong">Tin học văn phòng</a></li>
-                <li><a href=".app/templates/assets/calendar.html#tin_hoc_van_phong_mos">Tin học văn phòng (MOS)</a></li>
-                <li><a href=".app/templates/assets/calendar.html#mang_may_tinh">Mạng máy tính</a></li>
+                <li><a href="./assets/calendar.html#thiet_ke_website">Thiết kế Website</a></li>
+                <li><a href="./assets/calendar.html#lap_trinh_di_dong">Lập trình di động</a></li>
+                <li><a href="./assets/calendar.html#tin_hoc_van_phong">Tin học văn phòng</a></li>
+                <li><a href="./assets/calendar.html#tin_hoc_van_phong_mos">Tin học văn phòng (MOS)</a></li>
+                <li><a href="./assets/calendar.html#mang_may_tinh">Mạng máy tính</a></li>
             </ul>
         </li>
         <li class="sub">
-            <a href=".app/templates/assets/edu.html">Chương trình đào tạo <i class="fa-solid fa-caret-down"></i></a>
+            <a href="./assets/edu.html">Chương trình đào tạo <i class="fa-solid fa-caret-down"></i></a>
             <ul class="menu subcontent">
-                <li><a href=".app/templates/assets/edu.html#thiet_ke_website">Thiết kế Website</a></li>
-                <li><a href=".app/templates/assets/edu.html#lap_trinh_di_dong">Lập trình di động</a></li>
-                <li><a href=".app/templates/assets/edu.html#tin_hoc_van_phong">Tin học văn phòng</a></li>
-                <li><a href=".app/templates/assets/edu.html#tin_hoc_van_phong_mos">Tin học văn phòng (MOS)</a></li>
-                <li><a href=".app/templates/assets/edu.html#mang_may_tinh">Mạng máy tính</a></li>
+                <li><a href="./assets/edu.html#thiet_ke_website">Thiết kế Website</a></li>
+                <li><a href="./assets/edu.html#lap_trinh_di_dong">Lập trình di động</a></li>
+                <li><a href="./assets/edu.html#tin_hoc_van_phong">Tin học văn phòng</a></li>
+                <li><a href="./assets/edu.html#tin_hoc_van_phong_mos">Tin học văn phòng (MOS)</a></li>
+                <li><a href="./assets/edu.html#mang_may_tinh">Mạng máy tính</a></li>
             </ul>
         </li>
-        <li><a href=".app/templates/assets/services.html">Dịch vụ</a></li>
-        <li><a href=".app/templates/assets/news.html">Tin tức</a></li>
-        <li><a href=".app/templates/assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
-        <li><a href=".app/templates/assets/contact.html">Liên hệ</a></li>
+        <li><a href="./assets/services.html">Dịch vụ</a></li>
+        <li><a href="./assets/news.html">Tin tức</a></li>
+        <li><a href="./assets/paymentGuide.html">Hướng dẫn thanh toán</a></li>
+        <li><a href="./assets/contact.html">Liên hệ</a></li>
         <li id="nav_find" class="flex">
             <form action="">
                 <input type="text" placeholder="Tìm kiếm">
