--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trung Tâm Tin Học ĐH Mở Tp. Hồ Chí Minh</title>
-    <link rel="stylesheet" href="app/static/css/main.css">
-    <link rel="stylesheet" href="app/static/css/tablet.css" media="screen and (max-width: 1000px)">
-    <link rel="stylesheet" href="app/static/css/mobile.css" media="screen and (max-width: 500px)">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../static/css/tablet.css" media="screen and (max-width: 1000px)">
+    <link rel="stylesheet" href="../static/css/mobile.css" media="screen and (max-width: 500px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="shortcut icon" href="app/static/images/logo/Logo-DH-Mo-TPHCM-OU (1).webp">
+    <link rel="shortcut icon" href="../static/images/logo/logo-white.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
             integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -19,13 +19,13 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script type="text/javascript" src="app/static/js/main.js"></script>
-    <script type="text/javascript" src="app/static/js/home.js"></script>
+    <script type="text/javascript" src="../static/js/main.js"></script>
+    <script type="text/javascript" src="../static/js/home.js"></script>
 </head>
 <body>
 {% include 'layout/header.html' %}
 
-<div class="container">-->
+<div class="container">
     {% block content %}
 
     {% endblock %}
