cap nhat lai duong dan giua cac trang

--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -21,6 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="../static/js/main.js"></script>
     <script type="text/javascript" src="../static/js/home.js"></script>
+    <script type="text/javascript" src="../static/js/calendar.js"></script>
 </head>
 <body>
 {% include 'layout/header.html' %}
